Fixed layout spillover

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,7 +54,6 @@ fieldset {
 
 #container {
   float: left;
-  width: 600px;
   padding: 20px;
 }
 
